--- a/FinalProject/app/src/main/res/layout/fragment_main.xml
+++ b/FinalProject/app/src/main/res/layout/fragment_main.xml
@@ -18,11 +18,20 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/btnJoke"
         android:layout_below="@+id/instructions_text_view"
-        android:onClick="tellJoke"
         android:text="@string/button_text"
 
         />
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="invisible"
+        />
+
 
     <com.google.android.gms.ads.AdView
         android:id="@+id/adView"
